--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -1,5 +1,5 @@
 .experiencia {
-    font-family: 'Source code pro', sans-serif;
+    font-family: 'poppins', sans-serif;
 
     max-width: 1200px;
     padding: 30px 20px;
