--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: 'Source code pro', sans-serif;
+    font-family: 'roboto', sans-serif;
     margin: 0px;
     color: #141414;
 }
