--- a/css/formacao.css
+++ b/css/formacao.css
@@ -1,7 +1,7 @@
 .formacao {
     background: #1c1c1c;
     color: #ffffff;
-    font-family: 'Source code pro', sans-serif;
+    font-family: 'poppins', sans-serif;
 
 }
 
